# recito

./: .gitignore  CMakeLists.txt  README.md
doc/: design.md  end-user.md  requirements.md  slide.md
res/: dict_generator.py
res/json/: gcide_g-entries.json
src/: common.cpp  common.hpp
src/algorithm/: recito_algorithm.cpp  recito_algorithm.hpp
src/main/: CommandLineParser.cpp  CommandLineParser.hpp  Control.cpp  Control.hpp  ControlClass.hpp  ControlFactory.cpp  ControlFactory.hpp  Database.cpp  Database.hpp  Display.cpp  Display.hpp  Fragment.cpp  Fragment.hpp  MainLoop.cpp  MainLoop.hpp  Record.cpp  Record.hpp  View.cpp  View.hpp  ViewClass.hpp  ViewFactory.cpp  ViewFactory.hpp  Widget.cpp  Widget.hpp  main.cpp
test/: dict_test.txt  dict_test_broken.txt  dict_test_duplicate.txt  test.cpp
